# ATI_ROS2

./: .gitmodules  README.md  ROS2_config.bash  ati_environment.bash
.docker/: Dockerfile  README.md
SOEM/: CMakeLists.txt  package.xml
ati_description/: CMakeLists.txt  package.xml
ati_description/launch/: view_ati_axia80_m8.launch.py
ati_description/urdf/: ati_axia80_m8.urdf.xacro
ati_description/urdf/ati_axia80_m8/: ati_axia80_m8_macro.ros2_control.xacro  ati_axia80_m8_macro.xacro
ati_sensor/: CMakeLists.txt  package.xml
ati_sensor_ros/: CMakeLists.txt  package.xml
ati_sensor_ros/include/ati_sensor_ros/: ati_sensor_lib.hpp  ati_sensor_lib.hpp.bak  ati_sensor_ros.hpp
ati_sensor_ros/launch/: ati_sensor.launch.py
ati_sensor_ros/src/: ati_sensor_lib.cpp  ati_sensor_ros.cpp  test_sensor.cpp
